<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hunds App</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">CPU Section</string>
    <string name="title_section2">GPU Section</string>
    <string name="title_section3">Gaming Mode</string>
    <string name="section1_cpu1">CPU1 Frequency in kHz</string>
    <string name="section1_cpu2">CPU2 Frequency in kHz</string>
    <string name="section1_cpu3">CPU3 Frequency in kHz</string>
    <string name="section1_cpu4">CPU4 Frequency in kHz</string>
    <string name="section1_bt_apply">Apply current CPU Limits</string>
    <string name="section1_bt_read">Read current CPU Limits</string>
    <string name="section2_bt_apply">Apply current GPU Limit</string>
    <string name="section2_bt_read">Read current GPU Limit</string>
    <string name="section2_gpu">GPU Frequency in MHz</string>
    <string name="section3_gamingmode_info">WARNING: AT THE MOMENT ONLY FOR TF700T USERS!!!\n\nOverclocking tablets is good for daily work to make the tablet faster for most of your tasks. But when playing games, overclocking leads to a hot and restarting device. With this button you can active the &quot;Gaming Mode&quot; which clocks down your CPU and GPU frequencies which are best for gaming.</string>
    <string name="section3_gamingmode">Yes, Set CPU and GPU Frequencies for Gaming Mode</string>
    <string name="section1_savetoasuspowersaver">Save to PowerSaver</string>
    <string name="section1_savetoasusnormalmode">Save to Performance</string>
    <string name="section1_savetoasusbalancedmode">Save to Balanced</string>
    <string name="current_settings">Current Settings</string>
    <string name="asus_powersavermode">PowerSaver Mode</string>
    <string name="asus_balancedmode">Balanced Mode</string>
    <string name="asus_performancemode">Performance Mode</string>
    <string name="section1_bt_readfromasuspowersavermode">Read PowerSaver</string>
    <string name="section1_bt_readfromasusbalancedmode">Read Balanced</string>
    <string name="section1_bt_readfromasusperformancemode">Read Performance</string>
    <string name="section4_used_gov">Used Governor</string>
    <string name="section4_set_gov">Set Governor</string>
    <string name="title_section4">CPU Governor &amp; I/O Scheduler</string>
    <string name="section4_set_ioshed">Set I/O Scheduler</string>
    <string name="section4_used_iosched">Used I/O Scheduler</string>
    <string name="section4_set_on_boot">Load these settings on each boot</string>
    <string name="title_section5">CPU UV</string>
    <string name="section4_switch_string">Load settings at boot?</string>
    <string name="section5_switch_string">Load settings at boot?</string>
    <string name="section5_set_on_boot">Load these settings on each boot</string>
    <string name="section5_bt_apply">Apply Voltages!</string>
    <string name="title_section6">GPU UV</string>
    <string name="section6_switch_string">Load settings at boot?</string>
    <string name="section6_set_on_boot">Load these settings on each boot</string>
    <string name="section6_bt_apply">Apply Voltages!</string>
    <string name="title_section7">Hotplugging Config</string>
    <string name="section7_bt_apply">Apply Hotplugging Config</string>
    <string name="section7_rt_2">Bring Core 2 online when more than ( </string>
    <string name="section7_rt_3">Bring Core 3 online when more than ( </string>
    <string name="section7_rt_4">Bring Core 4 online when more than ( </string>
    <string name="section7_rt_endstring"> / 4(cores)) running-threads are active</string>
    <string name="section7_switch_string">Load settings at boot?</string>
    <string name="section8_download_url">http://d-h.st/GBy</string>
    <string name="section8_desc">What you need:\n- My kernel v3.4.1 (2013-10-29) or higher (look above in kernel info)\n- Installed Linux (see download link below)\n\nYou need to download this installer below and flash it in TWRP and install linux and kexec hardboot files. This installer does not install any new kernel - it just installs Linux! Only then you can boot to Linux with the button below!</string>
    <string name="title_section8">Boot to Linux</string>
    <string name="section8_bt_bootlinux">Boot to Linux now</string>
</resources>