<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/section2_current_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/current_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   
    <TextView
        android:id="@+id/section2_current_gpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/section2_gpu" />
    
    <Spinner
        android:id="@+id/section2_sp_gpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="125dp" />
    
    <Button
        android:id="@+id/section2_bt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="205dp"
        android:text="@string/section2_bt_apply" />

    <Button
        android:id="@+id/section2_bt_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section2_bt_apply"
        android:layout_alignRight="@+id/section2_bt_apply"
        android:layout_marginTop="255dp"
        android:text="@string/section2_bt_read" />

    <TextView
        android:id="@+id/section2_text_asuspowersavermode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="65dp"
        android:text="@string/asus_powersavermode"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/section2_text_gpu_asuspowersavermode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="100dp"
        android:text="@string/section2_gpu" />

    <Spinner
        android:id="@+id/section2_sp_gpu_asuspowersavermode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:inputType="number" />
    
    <Button
        android:id="@+id/section2_bt_asuspowersavermode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="205dp"
        android:text="@string/section1_savetoasuspowersaver" />

    <Button
        android:id="@+id/section2_bt_asuspowersavermode_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section2_bt_asuspowersavermode"
        android:layout_alignRight="@+id/section2_bt_asuspowersavermode"
        android:layout_marginTop="255dp"
        android:text="@string/section1_bt_readfromasuspowersavermode" />

        <TextView
            android:id="@+id/section2_text_asusbalancedmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="550dp"
            android:layout_marginTop="65dp"
            android:text="@string/asus_balancedmode"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/section2_text_gpu_asusbalancedmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="600dp"
        android:layout_marginTop="100dp"
        android:text="@string/section2_gpu" />

    <Spinner
        android:id="@+id/section2_sp_gpu_asusbalancedmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="600dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:inputType="number" />
    
    <Button
        android:id="@+id/section2_bt_asusbalancedmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="600dp"
        android:layout_marginTop="205dp"
        android:text="@string/section1_savetoasusbalancedmode" />

    <Button
        android:id="@+id/section2_bt_asusbalancedmode_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section2_bt_asusbalancedmode"
        android:layout_alignRight="@+id/section2_bt_asusbalancedmode"
        android:layout_marginTop="255dp"
        android:text="@string/section1_bt_readfromasusbalancedmode" />
    
        <TextView
        android:id="@+id/section2_text_asusperformancemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="780dp"
        android:layout_marginTop="65dp"
        android:text="@string/asus_performancemode"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/section2_text_gpu_asusperformancemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="830dp"
        android:layout_marginTop="100dp"
        android:text="@string/section2_gpu" />

    <Spinner
        android:id="@+id/section2_sp_gpu_asusperformancemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="830dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:inputType="number" />
    
    <Button
        android:id="@+id/section2_bt_asusperformancemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="830dp"
        android:layout_marginTop="205dp"
        android:text="@string/section1_savetoasusnormalmode" />

    <Button
        android:id="@+id/section2_bt_asusperformancemode_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="255dp"
        android:layout_alignLeft="@+id/section2_bt_asusperformancemode"
        android:layout_alignRight="@+id/section2_bt_asusperformancemode"
        android:text="@string/section1_bt_readfromasusperformancemode" />
    
</RelativeLayout>