<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/section4_governors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/section4_used_gov"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Spinner
        android:id="@+id/section4_sp_governors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="125dp" />
    
    <Button
        android:id="@+id/section4_bt_set_governor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="205dp"
        android:text="@string/section4_set_gov" />
    
    <TextView
        android:id="@+id/section4_ioschedulers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="65dp"
        android:text="@string/section4_used_iosched"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Spinner
        android:id="@+id/section4_sp_ioschedulers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="315dp"
        android:layout_marginTop="125dp" />
    
    <Button
        android:id="@+id/section4_bt_set_ioscheduler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="315dp"
        android:layout_marginTop="205dp"
        android:text="@string/section4_set_ioshed" />

    <Switch
        android:id="@+id/section4_bt_set_on_boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/section4_bt_set_governor"
        android:layout_below="@+id/section4_bt_set_governor"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="22dp"
        android:text="@string/section4_switch_string" />

</RelativeLayout>