<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/section7_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="65dp"
        android:text="@string/section7_rt_2" />
    
    <SeekBar
        android:id="@+id/section7_sb_rt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp" />
    
    <TextView
        android:id="@+id/section7_tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="170dp"
        android:text="@string/section7_rt_3" />
    
    <SeekBar
        android:id="@+id/section7_sb_rt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="195dp" />
    
    <TextView
        android:id="@+id/section7_tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="275dp"
        android:text="@string/section7_rt_4" />
    
    <SeekBar
        android:id="@+id/section7_sb_rt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp" />
        
    <Button
        android:id="@+id/section7_bt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="385dp"
        android:text="@string/section7_bt_apply" />

    <Switch
        android:id="@+id/section7_bt_set_on_boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="395dp"
        android:text="@string/section4_switch_string" />

    

</RelativeLayout>