<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >
    
    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/section8_tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="55dp"
        android:text="@string/section8_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/section8_tv_download_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section8_tv_desc"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:text="@string/section8_download_url"
        android:textSize="18sp" />

    <Button
        android:id="@+id/section8_bt_bootlinux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section8_tv_download_url"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/section8_bt_bootlinux" />

</RelativeLayout>
